Sep 4, 2006

* DOCS: Applied various style and typo patches to the documentation.  By
  Markus Triska.

Sep 3, 2006

* FIXED: `Go': deal properly with Windows filenames and fix handling of the
  references from /directory?dir=Dir by mapping these to /doc/Dir/index.html.

Sep 1, 2006

* Renamed Depreciated --> Deprecated.  Mike Elston.

Aug 31, 2006

* First release with SWI-Prolog 5.6.18

Aug 10, 2006

* Starts getting usable :-)