@@ -1,3 +1,8 @@
+Sep 8, 2006
+
+* Added referencing to and reading .txt files containing Wiki-style information
+  outside the source-files.
+
 Sep 4, 2006
 
 * DOCS: Applied various style and typo patches to the documentation.  By
